[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "TrainTracks4"
description = "Tracking particle"
readme = "README.md"
requires-python = ">=3.11,<3.12"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "kelpschd@gmail.com ", name = "Dan Kelpsch " },
]
dynamic = ["version"]
dependencies = [
    "opencv-python",
    "zarr",
    "nd2",
    "napari[all]", 
    "motile",
    "motile-tracker",
    "traccuracy",
    "pathlib",
    "ome-zarr"
]